--- a/apps/templates/flask-app.yaml
+++ b/apps/templates/flask-app.yaml
@@ -14,3 +14,6 @@ spec:
     path: flask-app
     repoURL: https://github.com/George-Mikulich/apps
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
