--- a/apps/templates/istio-in.yaml
+++ b/apps/templates/istio-in.yaml
@@ -14,3 +14,6 @@ spec:
     repoURL: https://github.com/istio/istio
     targetRevision: HEAD
     path: manifests/charts/gateways/istio-ingress
+  syncPolicy:
+    automated:
+      prune: true
