--- a/apps/templates/istio-op.yaml
+++ b/apps/templates/istio-op.yaml
@@ -14,3 +14,6 @@ spec:
     repoURL: https://github.com/istio/istio
     targetRevision: HEAD
     path: manifests/charts/istio-operator
+  syncPolicy:
+    automated:
+      prune: true
