--- a/apps/templates/prometheus.yaml
+++ b/apps/templates/prometheus.yaml
@@ -11,9 +11,9 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    chart: kube-prometheus-stack
-    repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 60.0.1
+    path: charts/kube-prometheus-stack
+    repoURL: https://github.com/prometheus-community/helm-charts
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
