--- a/apps/templates/prometheus.yaml
+++ b/apps/templates/prometheus.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     namespace: monitoring
-    server: {{ .Values.spec.destination.server }}
+    server: https://kubernetes.default.svc
   project: default
   source:
     chart: kube-prometheus-stack
