--- a/flask-app/templates/service.yaml
+++ b/flask-app/templates/service.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   ports:
   - port: {{ .Values.service.port }}
-    targetPort: {{ .Values.service.port }}
+    name: http
   selector:
     app: {{ .Values.appLabel }}
