--- a/flask-app/values.yaml
+++ b/flask-app/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: quay.io/george-mikulich/flask-app
-  tag: "1.0"
+  tag: "beautified"
 
 containerPort: 5000
 
