--- a/flask-app/templates/service.yaml
+++ b/flask-app/templates/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.appLabel }}
+  labels:
+    app: {{ .Values.appLabel }}
+    service: {{ .Values.appLabel }}
 spec:
   ports:
   - port: {{ .Values.service.port }}
