--- a/flask-app/templates/gateway.yaml
+++ b/flask-app/templates/gateway.yaml
@@ -7,8 +7,11 @@ spec:
     istio: ingressgateway
   servers:
   - port:
-      name: http
-      number: 8080
-      protocol: HTTP
+      name: https
+      number: 8443
+      protocol: HTTPS
     hosts:
-    - lol.app-georgij.com
+    - flask.app-georgij.com
+    tls:
+      mode: SIMPLE
+      credentialName: credential
