--- a/apps/templates/istio-addons.yaml
+++ b/apps/templates/istio-addons.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     path: samples/addons
     repoURL: https://github.com/istio/istio
-    targetRevision: HEAD
+    targetRevision: 1.21.3
   syncPolicy:
     automated:
       prune: true
