--- a/apps/templates/istio-in.yaml
+++ b/apps/templates/istio-in.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/istio/istio
-    targetRevision: HEAD
+    targetRevision: 1.21.3
     path: manifests/charts/gateways/istio-ingress
   syncPolicy:
     automated:
