--- a/apps/templates/istiod.yaml
+++ b/apps/templates/istiod.yaml
@@ -12,7 +12,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/istio/istio
-    targetRevision: HEAD
+    targetRevision: 1.21.3
     path: manifests/charts/istio-control/istio-discovery
   syncPolicy:
     automated:
