--- a/flask-app/templates/deployment.yaml
+++ b/flask-app/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.appLabel }}
+  name: {{ .Values.appLabel }}-v1
   labels:
     app: {{ .Values.appLabel }}
     version: v1
@@ -29,7 +29,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.appLabel }}
+  name: {{ .Values.appLabel }}-v2
   labels:
     app: {{ .Values.appLabel }}
     version: v2
