--- a/flask-app/templates/deployment.yaml
+++ b/flask-app/templates/deployment.yaml
@@ -11,11 +11,13 @@ spec:
   selector:
     matchLabels:
       app: {{ .Values.appLabel }}
+      version: v1
   template:
     metadata:
       labels:
         app: {{ .Values.appLabel }}
         istio-injection: "true"
+        version: v1
     spec:
       serviceAccountName: useless-thing
       containers:
@@ -39,11 +41,13 @@ spec:
   selector:
     matchLabels:
       app: {{ .Values.appLabel }}
+      version: v2
   template:
     metadata:
       labels:
         app: {{ .Values.appLabel }}
         istio-injection: "true"
+        version: v2
     spec:
       serviceAccountName: useless-thing
       containers:
