--- a/flask-app/templates/virtualService.yaml
+++ b/flask-app/templates/virtualService.yaml
@@ -9,10 +9,23 @@ spec:
   - myapp-gateway
   http:
   - match:
+    - headers:
+        user-agent:
+          exact: guga
     - uri:
         exact: /
     route:
     - destination:
         host: flask-app.default.svc.cluster.local
+        subset: v2
+        port:
+          number: 5000
+  - match:
+    - uri:
+        exact: /
+    route:
+    - destination:
+        host: flask-app.default.svc.cluster.local
+        subset: v1
         port:
           number: 5000
