--- a/flask-app/templates/virtualService.yaml
+++ b/flask-app/templates/virtualService.yaml
@@ -17,9 +17,17 @@ spec:
     route:
     - destination:
         host: flask-app.default.svc.cluster.local
+        subset: v1
+        port:
+          number: 5000
+      weight: 70
+    - destination:
+        host: flask-app.default.svc.cluster.local
         subset: v2
         port:
           number: 5000
+      weight: 30
+      
   - match:
     - uri:
         exact: /
