--- a/argo-workflow/deployments.yaml
+++ b/argo-workflow/deployments.yaml
@@ -19,6 +19,14 @@ spec:
         template: canary
         dependencies: [deploy-canary]
 
+      - name: deploy-v2
+        template: suspend
+        dependencies: [canary-deployment]
+
+      - name: v2-deployment
+        template: v2deployment
+        dependencies: [deploy-v2]
+
       - name: bluegreen-deployment
         template: bluegreen
         dependencies: [deploy-bluegreen]
@@ -53,6 +61,8 @@ spec:
         sed 's/previous/canary/' flask-app/templates/virtualService.yaml > tmp
         rm flask-app/templates/virtualService.yaml
         mv tmp flask-app/templates/virtualService.yaml
+        rm flask-app/templates/deployment.yaml
+        cp argo-workflow/deployment-mix.yaml flask-app/templates/deployment.yaml
         git config --global user.email "g.mikulich@softteco.com"
         git config --global user.name "$USER"
         git add .
@@ -130,6 +140,45 @@ spec:
         git config --global user.name "$USER"
         git add .
         git commit -m 'undo bluegreen deployment'
+        git push https://$USER:$TOKEN@github.com/George-Mikulich/apps.git main
+      env:
+      - name: USER
+        valueFrom:
+          secretKeyRef:
+            name: github-auth
+            key: username
+      - name: TOKEN
+        valueFrom:
+          secretKeyRef:
+            name: github-auth
+            key: password
+
+
+  - name: v2deployment
+    inputs:
+      artifacts:
+      - name: helm-chart
+        path: /src
+        git:
+          repo: https://github.com/George-Mikulich/apps
+          revision: "main"
+    container:
+      image: alpine/git:2.40.1
+      workingDir: /src
+      command:
+      - sh
+      - -c
+      - |
+        git checkout main
+        sed 's/canary/bluegreen/g; s/previous/bluegreen/g' flask-app/templates/virtualService.yaml > tmp
+        rm flask-app/templates/virtualService.yaml
+        mv tmp flask-app/templates/virtualService.yaml
+        rm flask-app/templates/deployment.yaml
+        cp argo-workflow/deployment-mix.yaml flask-app/templates/deployment.yaml
+        git config --global user.email "g.mikulich@softteco.com"
+        git config --global user.name "$USER"
+        git add .
+        git commit -m 'version 2 deployment'
         git push https://$USER:$TOKEN@github.com/George-Mikulich/apps.git main
       env:
       - name: USER
