--- a/argo-workflow/bluegreen/deployment-bluegreen.yaml
+++ b/argo-workflow/bluegreen/deployment-bluegreen.yaml
@@ -1,41 +1,3 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ .Values.appLabel }}-v1
-  labels:
-    app: {{ .Values.appLabel }}
-    version: v1
-spec:
-  replicas: {{ .Values.replicaCount }}
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: {{ .Values.appLabel }}
-  template:
-    metadata:
-      labels:
-        app: {{ .Values.appLabel }}
-        istio-injection: "true"
-        version: v1
-    spec:
-      serviceAccountName: useless-thing
-      containers:
-      - image: {{ .Values.image.registry }}/{{ .Values.image.username }}/{{ .Values.image.repo }}:{{ .Values.image.tag1 }}
-        name: {{ .Values.appLabel }}
-        ports:
-        - containerPort: {{ .Values.containerPort }}
-
----
-
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: useless-thing
-  labels:
-    account: {{ .Values.appLabel }}
-
----
-
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -73,3 +35,14 @@ spec:
         name: {{ .Values.appLabel }}
         ports:
         - containerPort: {{ .Values.containerPort }}
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: useless-thing
+  namespace: green
+  labels:
+    account: {{ .Values.appLabel }}
+
