--- a/argo-workflow/bluegreen/gateway-bluegreen.yaml
+++ b/argo-workflow/bluegreen/gateway-bluegreen.yaml
@@ -12,7 +12,7 @@ spec:
       number: 8443
       protocol: HTTPS
     hosts:
-    - flask2.app-georgij.com
+    - flask.app-georgij.com
     tls:
       mode: SIMPLE
       credentialName: demo-cert-tls
