--- a/flask-app/templates/gateway.yaml
+++ b/flask-app/templates/gateway.yaml
@@ -14,4 +14,4 @@ spec:
     - flask.app-georgij.com
     tls:
       mode: SIMPLE
-      credentialName: istio-ca-secret
+      credentialName: demo-cert-tls
