--- a/flask-app/templates/deployment.yaml
+++ b/flask-app/templates/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       labels:
         app: {{ .Values.appLabel }}
         version: v1
+        sidecar.istio.io/inject: "true"
     spec:
       serviceAccountName: useless-thing
       containers:
