add https redirect

--- a/flask-app/templates/gateway.yaml
+++ b/flask-app/templates/gateway.yaml
@@ -7,6 +7,14 @@ spec:
     istio: ingressgateway
   servers:
   - port:
+      name: http
+      number: 8080
+      protocol: HTTP
+    hosts:
+    - flask.app-georgij.com
+    tls:
+      httpsRedirect: true
+  - port:
       name: https
       number: 8443
       protocol: HTTPS
